.parser_generated/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    ANIMATE
    COLON
    CURSOR
    DO
    LBRACKET
    NOT
    OR
    RBRACKET
    WHILE

Grammar

Rule 0     S' -> programme
Rule 1     programme -> instruction
Rule 2     programme -> programme instruction
Rule 3     instruction -> dessin
Rule 4     instruction -> deplacement
Rule 5     instruction -> rotation
Rule 6     instruction -> couleur
Rule 7     instruction -> assignation
Rule 8     instruction -> modification
Rule 9     instruction -> conditionnelle
Rule 10    instruction -> boucle
Rule 11    instruction -> bloc
Rule 12    dessin -> DRAW forme LPAREN parametres RPAREN
Rule 13    forme -> LINE
Rule 14    forme -> CIRCLE
Rule 15    forme -> SQUARE
Rule 16    forme -> ARC
Rule 17    forme -> POINT
Rule 18    parametres -> parametres COMMA arg
Rule 19    parametres -> arg
Rule 20    arg -> NUMBER
Rule 21    arg -> IDENTIFIER
Rule 22    arg -> STRING
Rule 23    arg -> BOOLEAN
Rule 24    arg -> expression_arithmetic
Rule 25    expression_arithmetic -> expression_arithmetic PLUS expression_arithmetic
Rule 26    expression_arithmetic -> expression_arithmetic MINUS expression_arithmetic
Rule 27    expression_arithmetic -> expression_arithmetic TIMES expression_arithmetic
Rule 28    expression_arithmetic -> expression_arithmetic DIVIDE expression_arithmetic
Rule 29    expression_arithmetic -> LPAREN expression_arithmetic RPAREN
Rule 30    expression_arithmetic -> NUMBER
Rule 31    expression_arithmetic -> IDENTIFIER
Rule 32    deplacement -> MOVE LPAREN arg COMMA arg RPAREN
Rule 33    rotation -> ROTATE LPAREN arg RPAREN
Rule 34    couleur -> COLOR LPAREN arg RPAREN
Rule 35    assignation -> VARIABLE IDENTIFIER EQUALS arg
Rule 36    modification -> IDENTIFIER EQUALS arg
Rule 37    valeur -> NUMBER
Rule 38    valeur -> IDENTIFIER
Rule 39    valeur -> STRING
Rule 40    valeur -> BOOLEAN
Rule 41    bloc -> LBRACE programme RBRACE
Rule 42    conditionnelle -> IF LPAREN expression_logique RPAREN bloc ELSE bloc
Rule 43    conditionnelle -> IF LPAREN expression_logique RPAREN bloc
Rule 44    expression_logique -> valeur operateur_comparaison valeur
Rule 45    expression_logique -> BOOLEAN
Rule 46    operateur_comparaison -> EQ
Rule 47    operateur_comparaison -> NEQ
Rule 48    operateur_comparaison -> LT
Rule 49    operateur_comparaison -> GT
Rule 50    operateur_comparaison -> LE
Rule 51    operateur_comparaison -> GE
Rule 52    boucle -> FOR LPAREN assignation SEMICOLON expression_logique SEMICOLON modification RPAREN bloc

Terminals, with rules where they appear

AND                  : 
ANIMATE              : 
ARC                  : 16
BOOLEAN              : 23 40 45
CIRCLE               : 14
COLON                : 
COLOR                : 34
COMMA                : 18 32
CURSOR               : 
DIVIDE               : 28
DO                   : 
DRAW                 : 12
ELSE                 : 42
EQ                   : 46
EQUALS               : 35 36
FOR                  : 52
GE                   : 51
GT                   : 49
IDENTIFIER           : 21 31 35 36 38
IF                   : 42 43
LBRACE               : 41
LBRACKET             : 
LE                   : 50
LINE                 : 13
LPAREN               : 12 29 32 33 34 42 43 52
LT                   : 48
MINUS                : 26
MOVE                 : 32
NEQ                  : 47
NOT                  : 
NUMBER               : 20 30 37
OR                   : 
PLUS                 : 25
POINT                : 17
RBRACE               : 41
RBRACKET             : 
ROTATE               : 33
RPAREN               : 12 29 32 33 34 42 43 52
SEMICOLON            : 52 52
SQUARE               : 15
STRING               : 22 39
TIMES                : 27
VARIABLE             : 35
WHILE                : 
error                : 

Nonterminals, with rules where they appear

arg                  : 18 19 32 32 33 34 35 36
assignation          : 7 52
bloc                 : 11 42 42 43 52
boucle               : 10
conditionnelle       : 9
couleur              : 6
deplacement          : 4
dessin               : 3
expression_arithmetic : 24 25 25 26 26 27 27 28 28 29
expression_logique   : 42 43 52
forme                : 12
instruction          : 1 2
modification         : 8 52
operateur_comparaison : 44
parametres           : 12 18
programme            : 2 41 0
rotation             : 5
valeur               : 44 44

Parsing method: LALR

state 0

    (0) S' -> . programme
    (1) programme -> . instruction
    (2) programme -> . programme instruction
    (3) instruction -> . dessin
    (4) instruction -> . deplacement
    (5) instruction -> . rotation
    (6) instruction -> . couleur
    (7) instruction -> . assignation
    (8) instruction -> . modification
    (9) instruction -> . conditionnelle
    (10) instruction -> . boucle
    (11) instruction -> . bloc
    (12) dessin -> . DRAW forme LPAREN parametres RPAREN
    (32) deplacement -> . MOVE LPAREN arg COMMA arg RPAREN
    (33) rotation -> . ROTATE LPAREN arg RPAREN
    (34) couleur -> . COLOR LPAREN arg RPAREN
    (35) assignation -> . VARIABLE IDENTIFIER EQUALS arg
    (36) modification -> . IDENTIFIER EQUALS arg
    (42) conditionnelle -> . IF LPAREN expression_logique RPAREN bloc ELSE bloc
    (43) conditionnelle -> . IF LPAREN expression_logique RPAREN bloc
    (52) boucle -> . FOR LPAREN assignation SEMICOLON expression_logique SEMICOLON modification RPAREN bloc
    (41) bloc -> . LBRACE programme RBRACE

    DRAW            shift and go to state 12
    MOVE            shift and go to state 13
    ROTATE          shift and go to state 14
    COLOR           shift and go to state 15
    VARIABLE        shift and go to state 16
    IDENTIFIER      shift and go to state 17
    IF              shift and go to state 18
    FOR             shift and go to state 19
    LBRACE          shift and go to state 20

    programme                      shift and go to state 1
    instruction                    shift and go to state 2
    dessin                         shift and go to state 3
    deplacement                    shift and go to state 4
    rotation                       shift and go to state 5
    couleur                        shift and go to state 6
    assignation                    shift and go to state 7
    modification                   shift and go to state 8
    conditionnelle                 shift and go to state 9
    boucle                         shift and go to state 10
    bloc                           shift and go to state 11

state 1

    (0) S' -> programme .
    (2) programme -> programme . instruction
    (3) instruction -> . dessin
    (4) instruction -> . deplacement
    (5) instruction -> . rotation
    (6) instruction -> . couleur
    (7) instruction -> . assignation
    (8) instruction -> . modification
    (9) instruction -> . conditionnelle
    (10) instruction -> . boucle
    (11) instruction -> . bloc
    (12) dessin -> . DRAW forme LPAREN parametres RPAREN
    (32) deplacement -> . MOVE LPAREN arg COMMA arg RPAREN
    (33) rotation -> . ROTATE LPAREN arg RPAREN
    (34) couleur -> . COLOR LPAREN arg RPAREN
    (35) assignation -> . VARIABLE IDENTIFIER EQUALS arg
    (36) modification -> . IDENTIFIER EQUALS arg
    (42) conditionnelle -> . IF LPAREN expression_logique RPAREN bloc ELSE bloc
    (43) conditionnelle -> . IF LPAREN expression_logique RPAREN bloc
    (52) boucle -> . FOR LPAREN assignation SEMICOLON expression_logique SEMICOLON modification RPAREN bloc
    (41) bloc -> . LBRACE programme RBRACE

    DRAW            shift and go to state 12
    MOVE            shift and go to state 13
    ROTATE          shift and go to state 14
    COLOR           shift and go to state 15
    VARIABLE        shift and go to state 16
    IDENTIFIER      shift and go to state 17
    IF              shift and go to state 18
    FOR             shift and go to state 19
    LBRACE          shift and go to state 20

    instruction                    shift and go to state 21
    dessin                         shift and go to state 3
    deplacement                    shift and go to state 4
    rotation                       shift and go to state 5
    couleur                        shift and go to state 6
    assignation                    shift and go to state 7
    modification                   shift and go to state 8
    conditionnelle                 shift and go to state 9
    boucle                         shift and go to state 10
    bloc                           shift and go to state 11

state 2

    (1) programme -> instruction .

    DRAW            reduce using rule 1 (programme -> instruction .)
    MOVE            reduce using rule 1 (programme -> instruction .)
    ROTATE          reduce using rule 1 (programme -> instruction .)
    COLOR           reduce using rule 1 (programme -> instruction .)
    VARIABLE        reduce using rule 1 (programme -> instruction .)
    IDENTIFIER      reduce using rule 1 (programme -> instruction .)
    IF              reduce using rule 1 (programme -> instruction .)
    FOR             reduce using rule 1 (programme -> instruction .)
    LBRACE          reduce using rule 1 (programme -> instruction .)
    $end            reduce using rule 1 (programme -> instruction .)
    RBRACE          reduce using rule 1 (programme -> instruction .)


state 3

    (3) instruction -> dessin .

    DRAW            reduce using rule 3 (instruction -> dessin .)
    MOVE            reduce using rule 3 (instruction -> dessin .)
    ROTATE          reduce using rule 3 (instruction -> dessin .)
    COLOR           reduce using rule 3 (instruction -> dessin .)
    VARIABLE        reduce using rule 3 (instruction -> dessin .)
    IDENTIFIER      reduce using rule 3 (instruction -> dessin .)
    IF              reduce using rule 3 (instruction -> dessin .)
    FOR             reduce using rule 3 (instruction -> dessin .)
    LBRACE          reduce using rule 3 (instruction -> dessin .)
    $end            reduce using rule 3 (instruction -> dessin .)
    RBRACE          reduce using rule 3 (instruction -> dessin .)


state 4

    (4) instruction -> deplacement .

    DRAW            reduce using rule 4 (instruction -> deplacement .)
    MOVE            reduce using rule 4 (instruction -> deplacement .)
    ROTATE          reduce using rule 4 (instruction -> deplacement .)
    COLOR           reduce using rule 4 (instruction -> deplacement .)
    VARIABLE        reduce using rule 4 (instruction -> deplacement .)
    IDENTIFIER      reduce using rule 4 (instruction -> deplacement .)
    IF              reduce using rule 4 (instruction -> deplacement .)
    FOR             reduce using rule 4 (instruction -> deplacement .)
    LBRACE          reduce using rule 4 (instruction -> deplacement .)
    $end            reduce using rule 4 (instruction -> deplacement .)
    RBRACE          reduce using rule 4 (instruction -> deplacement .)


state 5

    (5) instruction -> rotation .

    DRAW            reduce using rule 5 (instruction -> rotation .)
    MOVE            reduce using rule 5 (instruction -> rotation .)
    ROTATE          reduce using rule 5 (instruction -> rotation .)
    COLOR           reduce using rule 5 (instruction -> rotation .)
    VARIABLE        reduce using rule 5 (instruction -> rotation .)
    IDENTIFIER      reduce using rule 5 (instruction -> rotation .)
    IF              reduce using rule 5 (instruction -> rotation .)
    FOR             reduce using rule 5 (instruction -> rotation .)
    LBRACE          reduce using rule 5 (instruction -> rotation .)
    $end            reduce using rule 5 (instruction -> rotation .)
    RBRACE          reduce using rule 5 (instruction -> rotation .)


state 6

    (6) instruction -> couleur .

    DRAW            reduce using rule 6 (instruction -> couleur .)
    MOVE            reduce using rule 6 (instruction -> couleur .)
    ROTATE          reduce using rule 6 (instruction -> couleur .)
    COLOR           reduce using rule 6 (instruction -> couleur .)
    VARIABLE        reduce using rule 6 (instruction -> couleur .)
    IDENTIFIER      reduce using rule 6 (instruction -> couleur .)
    IF              reduce using rule 6 (instruction -> couleur .)
    FOR             reduce using rule 6 (instruction -> couleur .)
    LBRACE          reduce using rule 6 (instruction -> couleur .)
    $end            reduce using rule 6 (instruction -> couleur .)
    RBRACE          reduce using rule 6 (instruction -> couleur .)


state 7

    (7) instruction -> assignation .

    DRAW            reduce using rule 7 (instruction -> assignation .)
    MOVE            reduce using rule 7 (instruction -> assignation .)
    ROTATE          reduce using rule 7 (instruction -> assignation .)
    COLOR           reduce using rule 7 (instruction -> assignation .)
    VARIABLE        reduce using rule 7 (instruction -> assignation .)
    IDENTIFIER      reduce using rule 7 (instruction -> assignation .)
    IF              reduce using rule 7 (instruction -> assignation .)
    FOR             reduce using rule 7 (instruction -> assignation .)
    LBRACE          reduce using rule 7 (instruction -> assignation .)
    $end            reduce using rule 7 (instruction -> assignation .)
    RBRACE          reduce using rule 7 (instruction -> assignation .)


state 8

    (8) instruction -> modification .

    DRAW            reduce using rule 8 (instruction -> modification .)
    MOVE            reduce using rule 8 (instruction -> modification .)
    ROTATE          reduce using rule 8 (instruction -> modification .)
    COLOR           reduce using rule 8 (instruction -> modification .)
    VARIABLE        reduce using rule 8 (instruction -> modification .)
    IDENTIFIER      reduce using rule 8 (instruction -> modification .)
    IF              reduce using rule 8 (instruction -> modification .)
    FOR             reduce using rule 8 (instruction -> modification .)
    LBRACE          reduce using rule 8 (instruction -> modification .)
    $end            reduce using rule 8 (instruction -> modification .)
    RBRACE          reduce using rule 8 (instruction -> modification .)


state 9

    (9) instruction -> conditionnelle .

    DRAW            reduce using rule 9 (instruction -> conditionnelle .)
    MOVE            reduce using rule 9 (instruction -> conditionnelle .)
    ROTATE          reduce using rule 9 (instruction -> conditionnelle .)
    COLOR           reduce using rule 9 (instruction -> conditionnelle .)
    VARIABLE        reduce using rule 9 (instruction -> conditionnelle .)
    IDENTIFIER      reduce using rule 9 (instruction -> conditionnelle .)
    IF              reduce using rule 9 (instruction -> conditionnelle .)
    FOR             reduce using rule 9 (instruction -> conditionnelle .)
    LBRACE          reduce using rule 9 (instruction -> conditionnelle .)
    $end            reduce using rule 9 (instruction -> conditionnelle .)
    RBRACE          reduce using rule 9 (instruction -> conditionnelle .)


state 10

    (10) instruction -> boucle .

    DRAW            reduce using rule 10 (instruction -> boucle .)
    MOVE            reduce using rule 10 (instruction -> boucle .)
    ROTATE          reduce using rule 10 (instruction -> boucle .)
    COLOR           reduce using rule 10 (instruction -> boucle .)
    VARIABLE        reduce using rule 10 (instruction -> boucle .)
    IDENTIFIER      reduce using rule 10 (instruction -> boucle .)
    IF              reduce using rule 10 (instruction -> boucle .)
    FOR             reduce using rule 10 (instruction -> boucle .)
    LBRACE          reduce using rule 10 (instruction -> boucle .)
    $end            reduce using rule 10 (instruction -> boucle .)
    RBRACE          reduce using rule 10 (instruction -> boucle .)


state 11

    (11) instruction -> bloc .

    DRAW            reduce using rule 11 (instruction -> bloc .)
    MOVE            reduce using rule 11 (instruction -> bloc .)
    ROTATE          reduce using rule 11 (instruction -> bloc .)
    COLOR           reduce using rule 11 (instruction -> bloc .)
    VARIABLE        reduce using rule 11 (instruction -> bloc .)
    IDENTIFIER      reduce using rule 11 (instruction -> bloc .)
    IF              reduce using rule 11 (instruction -> bloc .)
    FOR             reduce using rule 11 (instruction -> bloc .)
    LBRACE          reduce using rule 11 (instruction -> bloc .)
    $end            reduce using rule 11 (instruction -> bloc .)
    RBRACE          reduce using rule 11 (instruction -> bloc .)


state 12

    (12) dessin -> DRAW . forme LPAREN parametres RPAREN
    (13) forme -> . LINE
    (14) forme -> . CIRCLE
    (15) forme -> . SQUARE
    (16) forme -> . ARC
    (17) forme -> . POINT

    LINE            shift and go to state 23
    CIRCLE          shift and go to state 24
    SQUARE          shift and go to state 25
    ARC             shift and go to state 26
    POINT           shift and go to state 27

    forme                          shift and go to state 22

state 13

    (32) deplacement -> MOVE . LPAREN arg COMMA arg RPAREN

    LPAREN          shift and go to state 28


state 14

    (33) rotation -> ROTATE . LPAREN arg RPAREN

    LPAREN          shift and go to state 29


state 15

    (34) couleur -> COLOR . LPAREN arg RPAREN

    LPAREN          shift and go to state 30


state 16

    (35) assignation -> VARIABLE . IDENTIFIER EQUALS arg

    IDENTIFIER      shift and go to state 31


state 17

    (36) modification -> IDENTIFIER . EQUALS arg

    EQUALS          shift and go to state 32


state 18

    (42) conditionnelle -> IF . LPAREN expression_logique RPAREN bloc ELSE bloc
    (43) conditionnelle -> IF . LPAREN expression_logique RPAREN bloc

    LPAREN          shift and go to state 33


state 19

    (52) boucle -> FOR . LPAREN assignation SEMICOLON expression_logique SEMICOLON modification RPAREN bloc

    LPAREN          shift and go to state 34


state 20

    (41) bloc -> LBRACE . programme RBRACE
    (1) programme -> . instruction
    (2) programme -> . programme instruction
    (3) instruction -> . dessin
    (4) instruction -> . deplacement
    (5) instruction -> . rotation
    (6) instruction -> . couleur
    (7) instruction -> . assignation
    (8) instruction -> . modification
    (9) instruction -> . conditionnelle
    (10) instruction -> . boucle
    (11) instruction -> . bloc
    (12) dessin -> . DRAW forme LPAREN parametres RPAREN
    (32) deplacement -> . MOVE LPAREN arg COMMA arg RPAREN
    (33) rotation -> . ROTATE LPAREN arg RPAREN
    (34) couleur -> . COLOR LPAREN arg RPAREN
    (35) assignation -> . VARIABLE IDENTIFIER EQUALS arg
    (36) modification -> . IDENTIFIER EQUALS arg
    (42) conditionnelle -> . IF LPAREN expression_logique RPAREN bloc ELSE bloc
    (43) conditionnelle -> . IF LPAREN expression_logique RPAREN bloc
    (52) boucle -> . FOR LPAREN assignation SEMICOLON expression_logique SEMICOLON modification RPAREN bloc
    (41) bloc -> . LBRACE programme RBRACE

    DRAW            shift and go to state 12
    MOVE            shift and go to state 13
    ROTATE          shift and go to state 14
    COLOR           shift and go to state 15
    VARIABLE        shift and go to state 16
    IDENTIFIER      shift and go to state 17
    IF              shift and go to state 18
    FOR             shift and go to state 19
    LBRACE          shift and go to state 20

    programme                      shift and go to state 35
    instruction                    shift and go to state 2
    dessin                         shift and go to state 3
    deplacement                    shift and go to state 4
    rotation                       shift and go to state 5
    couleur                        shift and go to state 6
    assignation                    shift and go to state 7
    modification                   shift and go to state 8
    conditionnelle                 shift and go to state 9
    boucle                         shift and go to state 10
    bloc                           shift and go to state 11

state 21

    (2) programme -> programme instruction .

    DRAW            reduce using rule 2 (programme -> programme instruction .)
    MOVE            reduce using rule 2 (programme -> programme instruction .)
    ROTATE          reduce using rule 2 (programme -> programme instruction .)
    COLOR           reduce using rule 2 (programme -> programme instruction .)
    VARIABLE        reduce using rule 2 (programme -> programme instruction .)
    IDENTIFIER      reduce using rule 2 (programme -> programme instruction .)
    IF              reduce using rule 2 (programme -> programme instruction .)
    FOR             reduce using rule 2 (programme -> programme instruction .)
    LBRACE          reduce using rule 2 (programme -> programme instruction .)
    $end            reduce using rule 2 (programme -> programme instruction .)
    RBRACE          reduce using rule 2 (programme -> programme instruction .)


state 22

    (12) dessin -> DRAW forme . LPAREN parametres RPAREN

    LPAREN          shift and go to state 36


state 23

    (13) forme -> LINE .

    LPAREN          reduce using rule 13 (forme -> LINE .)


state 24

    (14) forme -> CIRCLE .

    LPAREN          reduce using rule 14 (forme -> CIRCLE .)


state 25

    (15) forme -> SQUARE .

    LPAREN          reduce using rule 15 (forme -> SQUARE .)


state 26

    (16) forme -> ARC .

    LPAREN          reduce using rule 16 (forme -> ARC .)


state 27

    (17) forme -> POINT .

    LPAREN          reduce using rule 17 (forme -> POINT .)


state 28

    (32) deplacement -> MOVE LPAREN . arg COMMA arg RPAREN
    (20) arg -> . NUMBER
    (21) arg -> . IDENTIFIER
    (22) arg -> . STRING
    (23) arg -> . BOOLEAN
    (24) arg -> . expression_arithmetic
    (25) expression_arithmetic -> . expression_arithmetic PLUS expression_arithmetic
    (26) expression_arithmetic -> . expression_arithmetic MINUS expression_arithmetic
    (27) expression_arithmetic -> . expression_arithmetic TIMES expression_arithmetic
    (28) expression_arithmetic -> . expression_arithmetic DIVIDE expression_arithmetic
    (29) expression_arithmetic -> . LPAREN expression_arithmetic RPAREN
    (30) expression_arithmetic -> . NUMBER
    (31) expression_arithmetic -> . IDENTIFIER

    NUMBER          shift and go to state 39
    IDENTIFIER      shift and go to state 40
    STRING          shift and go to state 41
    BOOLEAN         shift and go to state 42
    LPAREN          shift and go to state 37

    arg                            shift and go to state 38
    expression_arithmetic          shift and go to state 43

state 29

    (33) rotation -> ROTATE LPAREN . arg RPAREN
    (20) arg -> . NUMBER
    (21) arg -> . IDENTIFIER
    (22) arg -> . STRING
    (23) arg -> . BOOLEAN
    (24) arg -> . expression_arithmetic
    (25) expression_arithmetic -> . expression_arithmetic PLUS expression_arithmetic
    (26) expression_arithmetic -> . expression_arithmetic MINUS expression_arithmetic
    (27) expression_arithmetic -> . expression_arithmetic TIMES expression_arithmetic
    (28) expression_arithmetic -> . expression_arithmetic DIVIDE expression_arithmetic
    (29) expression_arithmetic -> . LPAREN expression_arithmetic RPAREN
    (30) expression_arithmetic -> . NUMBER
    (31) expression_arithmetic -> . IDENTIFIER

    NUMBER          shift and go to state 39
    IDENTIFIER      shift and go to state 40
    STRING          shift and go to state 41
    BOOLEAN         shift and go to state 42
    LPAREN          shift and go to state 37

    arg                            shift and go to state 44
    expression_arithmetic          shift and go to state 43

state 30

    (34) couleur -> COLOR LPAREN . arg RPAREN
    (20) arg -> . NUMBER
    (21) arg -> . IDENTIFIER
    (22) arg -> . STRING
    (23) arg -> . BOOLEAN
    (24) arg -> . expression_arithmetic
    (25) expression_arithmetic -> . expression_arithmetic PLUS expression_arithmetic
    (26) expression_arithmetic -> . expression_arithmetic MINUS expression_arithmetic
    (27) expression_arithmetic -> . expression_arithmetic TIMES expression_arithmetic
    (28) expression_arithmetic -> . expression_arithmetic DIVIDE expression_arithmetic
    (29) expression_arithmetic -> . LPAREN expression_arithmetic RPAREN
    (30) expression_arithmetic -> . NUMBER
    (31) expression_arithmetic -> . IDENTIFIER

    NUMBER          shift and go to state 39
    IDENTIFIER      shift and go to state 40
    STRING          shift and go to state 41
    BOOLEAN         shift and go to state 42
    LPAREN          shift and go to state 37

    arg                            shift and go to state 45
    expression_arithmetic          shift and go to state 43

state 31

    (35) assignation -> VARIABLE IDENTIFIER . EQUALS arg

    EQUALS          shift and go to state 46


state 32
